# bedrock-cost-analysis

./: .env.example  .gitignore  CHANGELOG.md  README.md  bedrock_costs.db  config.yaml  cost_engine.py  database.py  log_monitor.py  main.py  monitor_state.json  plan.md  prices_cache.json  pricing_fetcher.py  pyproject.toml  requirements.md  requirements.txt  setup.sh  setup_logging.py  start.sh  task-list.md
src/bedrock_monitor/: init.py  main.py  pricing_fetcher.py  setup_logging.py
