[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bedrock-cost-analysis"
version = "1.0.0"
description = "Real-time AWS Bedrock inference cost monitor"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.42,<2",
    "botocore>=1.42,<2",
    "requests>=2.33,<3",
    "rich>=15.0,<16",
    "PyYAML>=6.0,<7",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
bedrock-monitor = "bedrock_monitor.main:main"
bedrock-monitor-setup = "bedrock_monitor.setup_logging:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bedrock_monitor = ["../../config.yaml", "../../.env.example"]
